--- a/index.html
+++ b/index.html
@@ -142,14 +142,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-4">
-                    <a href=""> <i class="bi bi-file-earmark "></i>
+                    <a href="Images/Black White Minimalist CV Resume.pdf" target="_blank" rel="noopener noreferrer">
+                        <i class="bi bi-file-earmark "></i>
                     </a>
                 </div>
                 <div class="col-sm-4">
-                    <a href=""> <i class="bi bi-github"></i></a>
+                    <a href="https://github.com/A-Brown-0987"> <i class="bi bi-github"></i></a>
                 </div>
                 <div class="col-sm-4">
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/arianna-brown-736132311/"><i class="bi bi-linkedin"></i></a>
                 </div>
             </div>
         </div>
