Added an updated resume including portfolio link

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-4">
-                    <a href="Images/Black White Minimalist CV Resume.pdf" target="_blank" rel="noopener noreferrer">
+                    <a href="Images/Arianna Brown Resume.pdf" target="_blank" rel="noopener noreferrer">
                         <i class="bi bi-file-earmark "></i>
                     </a>
                 </div>
